--- a/.github/workflows/update-stats.yml
+++ b/.github/workflows/update-stats.yml
@@ -17,13 +17,13 @@ jobs:
         run: pip install PyGithub
       - name: Update stats
         env:
-          GITHUB_TOKEN: ${{ secrets.G_T }}
+          GITHUB_TOKEN: ${{ secrets.G_TOKEN }}
         run: |
           python - <<EOF
           from github import Github
           import os
           
-          g = Github(os.getenv('G_T'))
+          g = Github(os.getenv('GITHUB_TOKEN'))
           user = g.get_user('JhonaCodes')
           
           target_languages = ['Java', 'Dart', 'Kotlin', 'Rust']
