--- a/.github/workflows/update-stats.yml
+++ b/.github/workflows/update-stats.yml
@@ -23,7 +23,7 @@ jobs:
           from github import Github
           import os
           
-          g = Github(os.getenv('GITHUB_TOKEN'))
+          g = Github(os.getenv('G_TOKEN'))
           user = g.get_user('JhonaCodes')
           
           target_languages = ['Java', 'Dart', 'Kotlin', 'Rust']
